--- a/Mark_Projects.html
+++ b/Mark_Projects.html
@@ -16,7 +16,35 @@
       <div class="jumbotron">
           <h1>Projects</h1>
       </div>
-
+        <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="card flex-sm-row">
+              <div class="card-body">
+                <strong>School Project</strong>
+                <h3>Scratch Project CSP</h3>
+                <h4>September 2018</h4>
+                <p>In this project my partner and I made a Fortnite themed Super
+                Smash Bros. style game where players must be the last one alive.</p>
+              </div>
+              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Scratch.png" alt="Image of our Scratch game" height=150px width=350px>
+              <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <div class="card flex-sm-row">
+              <div class="card-body">
+                <strong>School Experience</strong>
+                <h3>MIT App Inventor Project</h3>
+                <h4>October 2018</h4>
+                <p>In this project my partner and I coded a state geography quiz
+                using blocks.</p>
+              </div>
+              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" width=175px>
+            </div>
+          </div>
+        </div>
+      </div>
     <footer>
       <div class="jumbotron">
         <div class="row">
