--- a/Mark_Resume.html
+++ b/Mark_Resume.html
@@ -16,7 +16,11 @@
       <div class="jumbotron">
           <h1>Resume</h1>
       </div>
-
+        <div>
+          <h1>
+            <a href="https://docs.google.com/document/d/1ktt7HnX018vekoy0dbjGo5fbSdijR6sX4sQzv6GfuCY/edit?usp=sharing">Click here to see full resume</a>
+          </h1>
+        </div>
     <footer>
       <div class="jumbotron">
         <div class="row">
