Update 2 (Picture Fix)

--- a/Mark_AboutMe.html
+++ b/Mark_AboutMe.html
@@ -20,19 +20,21 @@
     
     <section class="main">
       <div class="container">
-        <div class="col-md-4">
-          <a href="#">
-            <img src="Images/Me.png" class="img-thumbnail" >
-          </a>
-        </div>
-        <div class="col-md-8">
-          <p>Hi, I am Mark Owen Macasaet, and I am a freshman at Dublin High 
-          School. I am currently taking orchestra, Spanish 1, CSP, 
-          algebra two/trig, freshman seminar, biology, P.E., and 
-          advanced English.  In my free time, I enjoy playing video games,
+        <div class="row">
+          <div class="col-md-4">
+            <a href="#">
+              <img src="Images/Me.png" class="img-thumbnail" >
+            </a>
+          </div>
+          <div class="col-md-8">
+          <p>Hi,welcome to my online portfolio!  I am Mark Owen Macasaet, and I
+          am a freshman at Dublin High School. I am currently taking orchestra,
+          Spanish 1, CSP, algebra two/trig, freshman seminar, biology, P.E.,
+          and advanced English.  In my free time, I enjoy playing video games,
           mainly Fortnite, and I love the competition I experience when playing.
           As a hobby, I practice the violin, and I have been doing so for about
-          4 years now.</p>
+          4 years now.  </p>
+          </div>
         </div>
       </div>
     </section>
