--- a/Mark_ContactMe.html
+++ b/Mark_ContactMe.html
@@ -16,7 +16,9 @@
       <div class="jumbotron">
           <h1>Contact Me</h1>
       </div>
-        <div>
+        <div class="container">
+          <h4>Mark Owen Macasate</h4>
+          <h4>Location: Dublin, CA</h4>
           <h4>Email: markowenmacasaet@gmail.com</h4>
         </div>
     <footer>
@@ -25,11 +27,6 @@
           <div class= col-3>
             <a href="mailto:markowenmacasaet@gmail.com">
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
-            </a>
-          </div>
-          <div class= col-3>
-            <a href="https://fortnitetracker.com/profile/pc/%CE%9F%CF%89%CE%B5%CE%B7101">
-              <img src="Images/Fortnitelogo.png" style='max-width=100px' width=90px height=100px>
             </a>
           </div>
           <div class="col-5">
