--- a/Mark_Projects.html
+++ b/Mark_Projects.html
@@ -13,30 +13,30 @@
         <a class="nav-item nav-link" href="Mark_ContactMe.html">Contact Me</a>
        </nav>
     </div>
-      <div class="jumbotron">
-          <h1>Projects</h1>
-      </div>
-        <div class="container">
+    <div class="jumbotron">
+      <h1>Projects</h1>
+    </div>
+      <div class="container">
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-sm-6">
             <strong>School Project</strong>
             <h3>Scratch Project CSP</h3>
             <h4>September 2018</h4>
             <p>In this project my partner and I made a Fortnite themed Super
-               Smash Bros. style game where players must be the last one alive.</p>
-            <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe>
+               Smash Bros. style game where players must be the last one alive.
+               This project was made over the course of </p>
+            <a href="https://docs.google.com/document/d/1MoVRcfQbzQwSf_Of1W-ZBfRAayjx381MG0O0Gyib9ZY/edit?usp=sharing">Click here to see documentation</a>
+            <iframe class="col-sm-6" allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe>
             </div>
-          </div>
-          <div class="col-sm-12">
+          <div class="col-sm-6">
             <strong>School Experience</strong>
             <h3>MIT App Inventor Project</h3>
             <h4>October 2018</h4>
             <p>In this project my partner and I coded a state geography quiz
                using blocks.</p>
+            <a href="https://docs.google.com/document/d/1L063eZ3N0ONkri-wD_TwD6o_UPvu6V0lV-Ng3lNT8vk/edit?usp=sharingv">Click here to see documentation</a>
+            <img class="col-sm-6" style='max-width:250px; max-height:250px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" width=175px>
             </div>
-            <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" width=175px>
-            </div>
-          </div>
         </div>
       </div>
     <footer>
@@ -45,6 +45,11 @@
           <div class= col-3>
             <a href="mailto:markowenmacasaet@gmail.com">
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
+            </a>
+          </div>
+          <div class="col-3">
+            <a href="">
+              <img src="" style='max-width=100px' width=px height=px>
             </a>
           </div>
           <div class="col-5">
