--- a/Mark_AboutMe.html
+++ b/Mark_AboutMe.html
@@ -47,6 +47,11 @@
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
             </a>
           </div>
+          <div class="col-3">
+            <a href="">
+              <img src="" style='max-width=100px' width=px height=px>
+            </a>
+          </div>
           <div class="col-5">
             <a href="https://www.dublin.k12.ca.us/dhs">
               <img src="Images/DHSlogo.png" style='max-width:100px' class="float-right" >
