--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <h4>September 2018</h4>
                 <p>In this project my partner and I made a Fortnite themed Super
                 Smash Bros. style game where players must be the last one alive.</p>
-                <a href="Mark_Projects.html">Continue reading</a>
+                <a href="Mark_Projects.html">Continue reading...</a>
               </div>
-              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Scratch.png" alt="Image of our Scratch game" height=150px width=350px>
+              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Scratch.png" alt="Image of our Scratch game" height=250px width=175px>
             </div>
           </div>
           <div class="col-sm-6">
@@ -44,7 +44,7 @@
                 <h4>October 2018</h4>
                 <p>In this project my partner and I coded a state geography quiz
                 using blocks.</p>
-                <a href="Mark_Projects.html">Continue reading</a>
+                <a href="Mark_Projects.html">Continue reading...</a>
               </div>
               <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" width=175px>
             </div>
@@ -58,7 +58,7 @@
                 <p>In this class I have to perform at concerts throughout the
                  year and make sure I work well with others to make music sound
                  like it is supposed to.</p>
-                 <a href="Mark_Resume.html">Continue reading</a>
+                 <a href="Mark_Resume.html">Continue reading...</a>
               </div>
               <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Me.png" alt="Image of me playing violin" width=175px>
             </div>
@@ -71,7 +71,7 @@
                 <h4>5-Year Experience</h4>
                 <p>I take three classes a week and attend yearly tournaments to
                  earn medals and keep our school reputation.</p>
-                <a href="Mark_Resume.html">Continue reading</a>
+                <a href="Mark_Resume.html">Continue reading...</a>
               </div>
               <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Me.png" alt="Image of me wearing black belt" width=175px>
             </div>
@@ -85,6 +85,11 @@
           <div class= col-3>
             <a href="mailto:markowenmacasaet@gmail.com">
               <img src="Images/Mail.png" style='max-width=100px' width=125px height=100px>
+            </a>
+          </div>
+          <div class="col-3">
+            <a href="">
+              <img src="" style='max-width=100px' width=px height=px>
             </a>
           </div>
           <div class="col-5">
