--- a/Mark_AboutMe.html
+++ b/Mark_AboutMe.html
@@ -16,24 +16,53 @@
     <div class="jumbotron">
       <h1>Online Portfolio</h1>
       <p>Mark Owen Macasaet</p>
+      <p>You can contact me at markowenmacasaet@gmail.com</p>
     </div>
     
     <section class="main">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <a href="#">
-              <img src="Images/Me.png" class="img-thumbnail" >
-            </a>
+            <img src="Images/Me.png" class="img-thumbnail">
           </div>
-          <div class="col-md-8">
-          <p>Hi,welcome to my online portfolio!  I am Mark Owen Macasaet, and I
-          am a freshman at Dublin High School. I am currently taking orchestra,
-          Spanish 1, CSP, algebra two/trig, freshman seminar, biology, P.E.,
-          and advanced English.  In my free time, I enjoy playing video games,
-          mainly Fortnite, and I love the competition I experience when playing.
-          As a hobby, I practice the violin, and I have been doing so for about
-          4 years now.  </p>
+          <div class="col-md-8 row">
+            <h4><u>General:</u></h4>
+            <p>Hi, welcome to my online portfolio!  I am Mark Owen Macasaet, and
+            I am a freshman at Dublin High School.  I am always focused on my 
+            studies and I put my best effort in every subject I take.  In my 
+            free time, I enjoy playing video games, mainly Fortnite, and I love
+            competing against others when playing.  As a hobby as well as for 
+            school, I practice the violin, and I have been doing so for about 4 
+            years now.</p>
+          </div>
+          <div class="col-md-8 row text-align:justify">
+            <h4><u>Career Goal:</u></h4>
+            <p>As of now, I am freshman trying to figure out where to 
+            go next in my life plan.  I am looking to obtain a job as an 
+            aerospace engineer, which is a job that I would probably enjoy the 
+            most.  I am interested in design and I want to be able to make 
+            scientific discoveries that make a difference in the world.</p>
+          </div>
+          <div class="col-md-8 row text-align:justify">
+            <h4><u>Qualities and Skills:</u></h4>
+            <p>I excel in being creative in everyday activities as well as 
+            academic work.  I put my best effort in all my work and practices 
+            that pay off in the best results.  I stay determined and persevere 
+            through all hardships, and I do not give up.  I have basic coding 
+            skills consisting of coding for HTML, CSS, Command Line, Bootstrap, 
+            and Python.  I am in an advanced class for math (Algebra 
+            2/Trigonometry) that is above my current grade level.  I focus on
+            studies and prioritize it more than other activities.  I also am a 
+            very good leader, and I can be part of a team.  For example, I am 
+            part of the Dublin High School Orchestra, where I have to make sure 
+            I contribute as much as I can.</p>
+          <div class="col-md-8 row text-align:justify">
+            <h4><u>Achievements:</u></h4>
+            <p>I succeeded in many activities throughout my life, the most 
+            important being academically.  I am taking many advanced classes for 
+            this year of highschool so I can really challenge myself.  I 
+            currently have a 4.0 GPA, from all my classes having high grades.</p>
+          </div>
           </div>
         </div>
       </div>
