--- a/Mark_ContactMe.html
+++ b/Mark_ContactMe.html
@@ -15,6 +15,8 @@
     </div>
       <div class="jumbotron">
           <h1>Contact Me</h1>
+          <p>Here is my personal information if you would like to communicate
+          with me.</p>
       </div>
         <div class="container">
           <h4>Mark Owen Macasaet</h4>
