--- a/Mark_Projects.html
+++ b/Mark_Projects.html
@@ -15,6 +15,7 @@
     </div>
     <div class="jumbotron">
       <h1>Projects</h1>
+      <p>Here are school projects I have worked on so far in this school year.</p>
     </div>
       <div class="container">
         <div class="row">
@@ -22,20 +23,41 @@
             <strong>School Project</strong>
             <h3>Scratch Project CSP</h3>
             <h4>September 2018</h4>
-            <p>In this project my partner and I made a Fortnite themed Super
-               Smash Bros. style game where players must be the last one alive.
-               This project was made over the course of </p>
+            <p>This was an assigned school project for my Computer Science 
+            Principles class where we needed to create a Scratch game.  In 
+            this project, my partner and I decided to make a Fortnite themed 
+            Super Smash Bros style game where players must be the last one 
+            alive.  It is currently still in development due to the enormous 
+            variety of features planned to be implemented.  Teamwork was 
+            important in this project due to us not being able to work on the 
+            same Scratch game at the same time.  It required constant 
+            coordination and so we designated parts for each of us to complete. 
+            We also made sure we had days when we would remix each other's 
+            projects to keep the features up to date.</p>
             <a href="https://docs.google.com/document/d/1MoVRcfQbzQwSf_Of1W-ZBfRAayjx381MG0O0Gyib9ZY/edit?usp=sharing">Click here to see documentation</a>
-            <iframe class="col-sm-6" allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe>
-            </div>
+            <iframe class="float-right col-sm-9" allowtransparency="true" width="480" height="400" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-sm-6">
             <strong>School Experience</strong>
             <h3>MIT App Inventor Project</h3>
             <h4>October 2018</h4>
-            <p>In this project my partner and I coded a state geography quiz
-               using blocks.</p>
+            <p>This project was assinged in my Computer Science Principles class 
+            and students had to pick a tutorial and build off of it to make 
+            our own apps.  In this project my partner and I coded a state 
+            geography quiz using blocks in MIT App Inventor.  We then used 
+            tablets to display our newly created apps.  The most difficult 
+            aspect of this project was the limits of MIT App Inventor itself, 
+            and getting used to the way blocks are used.  Many blocks were 
+            unable to be customized in the way that would be most efficient to
+            compile code, so there were constant problems in making sure pieces 
+            of code worked the way we wanted it to.  We solved this problem by 
+            constantly running the app on the tablets as a test after we change 
+            even the smallest part of code, so we can see exactly which blocks 
+            need to be fixed.</p>
             <a href="https://docs.google.com/document/d/1L063eZ3N0ONkri-wD_TwD6o_UPvu6V0lV-Ng3lNT8vk/edit?usp=sharingv">Click here to see documentation</a>
-            <img class="col-sm-6" style='max-width:250px; max-height:250px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" width=175px>
+            <img class="float-right col-sm-9" style='max-width:250px; max-height:250px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" width=175px>
             </div>
         </div>
       </div>
