--- a/Mark_Resume.html
+++ b/Mark_Resume.html
@@ -15,10 +15,52 @@
     </div>
       <div class="jumbotron">
           <h1>Resume</h1>
+          <p>Here are my skills and achievements that distinguish me from 
+          others.</p>
       </div>
-        <div>
-          <h1></h1>
-        </div>
+      <div class="container">
+        <h4><u>Objective:</u></h4>
+        <p>My goal for the future is to obtain and secure a full-time job as an
+        aeorospace engineer.</p>
+        <h4><u>Education:</u></h4>
+        <ul>
+          <li>Dublin High School</li>
+          <li>Freshman year</li>
+          <li>Courses: Algebra 2/Trigonometry, Computer Science Principles, 
+          Biology, Advanced English, Orchestra</li>
+          <li>Planning for attending Stanford: taking Aeronautics & Astronautics</li>
+        </ul>
+        <h4><u>Future Planned Experience:</u></h4>
+        <ul>
+          <li>Finishing volunteer hours in future years by doing events whenever 
+          time is available</li>
+           <li>Taking part-time job in junior year to prepare and save up a small 
+           amount of money.</li>
+        </ul>
+        <h4><u>Skills:</u></h4>
+        <ul>
+          <li>Basic Spanish</li>
+          <li>Basic coding (HTML, CSS, Command Line, Bootstrap, and Python)</li>
+          <li>Music composition</li>
+          <li>Self-motivation</li>
+          <li>Efficient communication</li>
+          <li>Flexibility/Adaptability</li>
+          <li>Mathematics</li>
+          <li>Leadership</li>
+          <li>Problem-solving</li>
+        </ul>
+        <h4><u>Academic Achievements:</u></h4>
+        <ul>
+          <li>Honor roll for every semester</li>
+          <li>Taking an advanced math class (Algebra 2/Trigonometry) for 
+          fresman year.</li>
+        </ul>
+        <h4><u>Extracurricular Activities:</u></h4>
+        <ul>
+          <li>Violin</li>
+          <li>Kuk Sool Won (Martial Arts)</li>
+        </ul>
+      </div>
     <footer>
       <div class="jumbotron">
         <div class="row">
