--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="jumbotron">
       <h1>Mark Owen Macasaet's Portfolio</h1>
-      <p>I am currently a freshman at Dublin High School.</p>
+      <p>Hi, I am Mark Owen and I am currently a freshman studying at Dublin High School.</p>
       <a href="Mark_AboutMe.html">Continue reading...</a>
     </div>
       <div class="container">
@@ -60,7 +60,7 @@
                  like it is supposed to.</p>
                  <a href="Mark_Resume.html">Continue reading...</a>
               </div>
-              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Me.png" alt="Image of me playing violin" width=175px>
+              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Violin.png" alt="Image of a violin" width=175px>
             </div>
           </div>
           <div class="col-sm-6">
@@ -73,7 +73,7 @@
                  earn medals and keep our school reputation.</p>
                 <a href="Mark_Resume.html">Continue reading...</a>
               </div>
-              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/Me.png" alt="Image of me wearing black belt" width=175px>
+              <img class="card-img-right" style='max-width:250px; max-height:250px' src="Images/WKSA.png" alt="Kuk Sool Won Association" width=175px>
             </div>
           </div>
         </div>
