--- a/Mark_AboutMe.html
+++ b/Mark_AboutMe.html
@@ -23,11 +23,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <img src="Images/Me.png" class="img-thumbnail">
+            <a href="#">
+              <img src="Images/Me.png" class="img-thumbnail">
+            </a>
           </div>
-          <div class="col-md-8 row">
+          <div class="col-md-12 row">
             <h4><u>General:</u></h4>
-            <p>Hi, welcome to my online portfolio!  I am Mark Owen Macasaet, and
+            <p>Hi, welcome to my online portfolio!  I am Mark Owen Macasaet, and 
             I am a freshman at Dublin High School.  I am always focused on my 
             studies and I put my best effort in every subject I take.  In my 
             free time, I enjoy playing video games, mainly Fortnite, and I love
@@ -35,7 +37,7 @@
             school, I practice the violin, and I have been doing so for about 4 
             years now.</p>
           </div>
-          <div class="col-md-8 row text-align:justify">
+          <div class="col-md-12 row text-align:justify">
             <h4><u>Career Goal:</u></h4>
             <p>As of now, I am freshman trying to figure out where to 
             go next in my life plan.  I am looking to obtain a job as an 
@@ -43,7 +45,7 @@
             most.  I am interested in design and I want to be able to make 
             scientific discoveries that make a difference in the world.</p>
           </div>
-          <div class="col-md-8 row text-align:justify">
+          <div class="col-md-12 row text-align:justify">
             <h4><u>Qualities and Skills:</u></h4>
             <p>I excel in being creative in everyday activities as well as 
             academic work.  I put my best effort in all my work and practices 
@@ -56,12 +58,16 @@
             very good leader, and I can be part of a team.  For example, I am 
             part of the Dublin High School Orchestra, where I have to make sure 
             I contribute as much as I can.</p>
-          <div class="col-md-8 row text-align:justify">
+          <div class="col-md-12 row text-align:justify">
             <h4><u>Achievements:</u></h4>
             <p>I succeeded in many activities throughout my life, the most 
-            important being academically.  I am taking many advanced classes for 
-            this year of highschool so I can really challenge myself.  I 
-            currently have a 4.0 GPA, from all my classes having high grades.</p>
+            important being academically.  I am taking many advanced classes for
+             this year of highschool so I can really challenge myself.  I 
+            currently have a 4.0 GPA, from all my classes having high grades.  
+            In my extracurricular activities, I have earned a black belt in 
+            martial arts after attending for 5-years, and I have improved 
+            greatly in playing violin since I have started practicing 4 years 
+            ago.</p>
           </div>
           </div>
         </div>
