--- a/Mark_Projects.html
+++ b/Mark_Projects.html
@@ -35,7 +35,9 @@
             We also made sure we had days when we would remix each other's 
             projects to keep the features up to date.</p>
             <a href="https://docs.google.com/document/d/1MoVRcfQbzQwSf_Of1W-ZBfRAayjx381MG0O0Gyib9ZY/edit?usp=sharing">Click here to see documentation</a>
-            <iframe class="float-right col-sm-9" allowtransparency="true" width="480" height="400" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe>
+          <div class="row">
+            <iframe allowtransparency="true" width="480" height="400" src="//scratch.mit.edu/projects/embed/244988755/?autostart=false" frameborder="0" allowfullscreen></iframe>
+          </div>
           </div>
         </div>
         <div class="row">
@@ -57,8 +59,10 @@
             even the smallest part of code, so we can see exactly which blocks 
             need to be fixed.</p>
             <a href="https://docs.google.com/document/d/1L063eZ3N0ONkri-wD_TwD6o_UPvu6V0lV-Ng3lNT8vk/edit?usp=sharingv">Click here to see documentation</a>
-            <img class="float-right col-sm-9" style='max-width:250px; max-height:250px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" width=175px>
-            </div>
+          <div class="row">
+            <img style='max-width:400px; max-height:500px' src="Images/MITAppInventor.png" alt="Image of our State Geography Quiz" width=300px>
+          </div>
+          </div>
         </div>
       </div>
     <footer>
